# projetos_praticos_c_cpp

./: README.md
01_exercicios_c_cpp_completo/: README.md
02_exercicios_cpp_computacao_grafica/: README.md
03_Learn_C++_Programming_Making_Games/: README.md
04_Engine_Tutorial_Series/OpenGLGame/: OpenGLGame.sln
04_exercicios_cpp_poo/Aula_01/: Estruturado.cpp
04_exercicios_cpp_poo/Aula_02/: Jogo.cpp  Jogo.h  Orientado.cpp
04_exercicios_cpp_poo/Aula_03/: Jogo.cpp  Jogo.h
04_exercicios_cpp_poo/Aula_04/: Point.cpp
04_exercicios_cpp_poo/Aula_06/: Jogo.cpp
04_exercicios_cpp_poo/Aula_07/: Jogo.cpp
04_exercicios_cpp_poo/Aula_08/: Pilha.cpp
05_Exercicios_Programacao_Games_C_Cpp/Lab06/: D3DGame.cpp  Game.cpp  Game.h  Graphics.cpp  Graphics.h
05_Exercicios_Programacao_Games_C_Cpp/Lab09/: Ball.cpp
05_Exercicios_Programacao_Games_C_Cpp/Lab11/: Engine.cpp  FoodL1.txt
05_Exercicios_Programacao_Games_C_Cpp/Lab30/LightYears/: .gitignore  CMakeLists.txt
05_Exercicios_Programacao_Games_C_Cpp/Lab30/LightYears/LightYears/: CMakeLists.txt
05_Exercicios_Programacao_Games_C_Cpp/Lab30/LightYears/LightYears/src/: main.cpp
06_Beginning_Cpp_Programming_From_Beginner_Beyond/: .gitignore
06_Beginning_Cpp_Programming_From_Beginner_Beyond/Section4/: Section4.workspace  compile_commands.json
06_Beginning_Cpp_Programming_From_Beginner_Beyond/Workspace1/: .gitignore  compile_commands.json
06_Beginning_Cpp_Programming_From_Beginner_Beyond/Workspace2/: Workspace2.workspace  compile_commands.json
exercicios_cpp_computacao_grafica/: README.md
(+1391 files in other folders)
